src/snapshots/raoul__tests__parse_ast_is_ok@binary-search.ra.snap
---
source: src/tests.rs
expression: quad_manager
input_file: src/examples/valid/non-plot/binary-search.ra
---
0 - Goto       -     -     34   
1 - Lt         1001  1000  2750 
2 - GotoF      2750  -     4    
3 - Return     3000  -     -    
4 - Minus      1001  1000  2000 
5 - Div        2000  3001  2001 
6 - Sum        1000  2001  2002 
7 - Assignment 2002  -     1003 
8 - Ver        1003  3003  -    
9 - Sum        3002  1003  4000 
10 - Eq         4000  1002  2750 
11 - GotoF      2750  -     13   
12 - Return     1003  -     -    
13 - Ver        1003  3003  -    
14 - Sum        3002  1003  4001 
15 - Gt         4001  1002  2750 
16 - GotoF      2750  -     25   
17 - Era        8     1     -    
18 - Minus      1003  3002  2002 
19 - Param      1000  -     0    
20 - Param      2002  -     1    
21 - Param      1002  -     2    
22 - GoSub      1     -     -    
23 - Assignment 0     -     2002 
24 - Return     2002  -     -    
25 - Era        8     1     -    
26 - Sum        1003  3002  2002 
27 - Param      2002  -     0    
28 - Param      1001  -     1    
29 - Param      1002  -     2    
30 - GoSub      1     -     -    
31 - Assignment 0     -     2002 
32 - Return     2002  -     -    
33 - EndProc    -     -     -    
34 - Ver        3004  3003  -    
35 - Sum        3002  3004  4002 
36 - Assignment 3002  -     4002 
37 - Ver        3002  3003  -    
38 - Sum        3002  3002  4003 
39 - Assignment 3001  -     4003 
40 - Ver        3001  3003  -    
41 - Sum        3002  3001  4004 
42 - Assignment 3005  -     4004 
43 - Ver        3005  3003  -    
44 - Sum        3002  3005  4005 
45 - Assignment 3006  -     4005 
46 - Ver        3006  3003  -    
47 - Sum        3002  3006  4006 
48 - Assignment 3007  -     4006 
49 - Ver        3007  3003  -    
50 - Sum        3002  3007  4007 
51 - Assignment 3008  -     4007 
52 - Ver        3008  3003  -    
53 - Sum        3002  3008  4008 
54 - Assignment 3009  -     4008 
55 - Ver        3009  3003  -    
56 - Sum        3002  3009  4009 
57 - Assignment 3010  -     4009 
58 - Ver        3010  3003  -    
59 - Sum        3002  3010  4010 
60 - Assignment 3011  -     4010 
61 - Ver        3011  3003  -    
62 - Sum        3002  3011  4011 
63 - Assignment 3003  -     4011 
64 - Era        8     1     -    
65 - Param      3004  -     0    
66 - Param      3011  -     1    
67 - Param      3002  -     2    
68 - GoSub      1     -     -    
69 - Assignment 0     -     2000 
70 - Print      2000  -     -    
71 - Era        8     1     -    
72 - Param      3004  -     0    
73 - Param      3011  -     1    
74 - Param      3009  -     2    
75 - GoSub      1     -     -    
76 - Assignment 0     -     2001 
77 - Print      2001  -     -    
78 - Era        8     1     -    
79 - Param      3004  -     0    
80 - Param      3011  -     1    
81 - Param      3000  -     2    
82 - GoSub      1     -     -    
83 - Assignment 0     -     2001 
84 - Print      2001  -     -    
85 - PrintNl    -     -     -    
86 - End        -     -     -    

