src/snapshots/raoul__tests__parse_ast_is_ok@block-or-statement.ra.snap
---
source: src/tests.rs
expression: quad_manager
input_file: src/examples/valid/non-plot/block-or-statement.ra
---
0 - Goto       -     -     5    
1 - GotoF      3750  -     3    
2 - Return     3000  -     -    
3 - Return     3001  -     -    
4 - EndProc    -     -     -    
5 - Era        0     1     -    
6 - GoSub      1     -     -    
7 - Assignment 0     -     2000 
8 - Print      2000  -     -    
9 - PrintNl    -     -     -    
10 - End        -     -     -    

