src/snapshots/raoul__tests__parse_ast_is_ok@dataframe.ra.snap
---
source: src/tests.rs
expression: quad_manager
input_file: src/examples/valid/dataframe.ra
---
0    - Goto       -     -     1
1    - ReadCSV    3500  -     -
2    - Rows       -     -     2000
3    - Assignment 2000  -     1000
4    - Columns    -     -     2001
5    - Assignment 2001  -     1001
6    - Print      1000  -     -
7    - Print      1001  -     -
8    - PrintNl    -     -     -
9    - Assignment 3501  -     1500
10   - Average    3502  -     2250
11   - Print      2250  -     -
12   - PrintNl    -     -     -
13   - Std        1500  -     2250
14   - Print      2250  -     -
15   - PrintNl    -     -     -
16   - Median     1500  -     2250
17   - Print      2250  -     -
18   - PrintNl    -     -     -
19   - Variance   1500  -     2250
20   - Print      2250  -     -
21   - PrintNl    -     -     -
22   - Min        1500  -     2250
23   - Print      2250  -     -
24   - PrintNl    -     -     -
25   - Max        1500  -     2250
26   - Print      2250  -     -
27   - PrintNl    -     -     -
28   - Range      1500  -     2250
29   - Print      2250  -     -
30   - PrintNl    -     -     -
31   - Corr       1500  3502  2250
32   - Print      2250  -     -
33   - PrintNl    -     -     -
34   - End        -     -     -

