src/snapshots/raoul__tests__parse_ast_is_ok@float-to-int.ra.snap
---
source: src/tests.rs
expression: quad_manager
input_file: src/examples/valid/float-to-int.ra
---
0    - Goto       -     -     1
1    - Assignment 3000  -     1000
2    - Assignment 3250  -     1000
3    - Print      1000  -     -
4    - PrintNl    -     -     -
5    - End        -     -     -

