src/snapshots/raoul__tests__parse_ast_is_ok@for.ra.snap
---
source: src/tests.rs
expression: quad_manager
input_file: src/examples/valid/for.ra
---
0 - Goto       -     -     1    
1 - Assignment 3000  -     1000 
2 - Assignment 3001  -     1001 
3 - Sum        1000  3001  2000 
4 - Lte        1001  2000  2750 
5 - GotoF      2750  -     11   
6 - Assignment 1001  -     1002 
7 - Print      1002  -     -    
8 - PrintNl    -     -     -    
9 - Inc        -     -     1001 
10 - Goto       -     -     3    
11 - Print      1001  -     -    
12 - Print      1000  -     -    
13 - PrintNl    -     -     -    
14 - End        -     -     -    

