src/snapshots/raoul__tests__parse_ast_is_ok@functions.ra.snap
---
source: src/tests.rs
expression: quad_manager
input_file: src/examples/valid/functions.ra
---
0 - Goto       -     -     5    
1 - Assignment 3000  -     1000 
2 - EndProc    -     -     -    
3 - Return     1000  -     -    
4 - EndProc    -     -     -    
5 - Era        1     1     -    
6 - GoSub      1     -     -    
7 - Era        1     3     -    
8 - Param      3001  -     0    
9 - GoSub      3     -     -    
10 - Assignment 0     -     1000 
11 - Print      1000  -     -    
12 - PrintNl    -     -     -    
13 - End        -     -     -    

