src/snapshots/raoul__tests__parse_ast_is_ok@hello-world.ra.snap
---
source: src/tests.rs
expression: quad_manager
input_file: src/examples/valid/hello-world.ra
---
0    - Goto       -     -     1
1    - Print      3500  -     -
2    - PrintNl    -     -     -
3    - End        -     -     -

